syntax = "proto3";

option csharp_namespace = "Authentication.Proto";

service checkPermissionService{
	rpc checkPermission (checkPermissionRequest) returns (checkPermissionResponse);
}

message checkPermissionRequest{
	string permission = 1;
}

message checkPermissionResponse{
	bool isallowed = 1;
}